--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
 </head>
 <body>
   <div class="head">
-    <button type="button" id="Btitle">タイトルに戻る</button>
-    <button type="button" id="Bgame">ゲームを開始</button>
-    <button type="button" id="Branking">ランキンを表示</button>
+    <button type="button" onclick="disp('title')">タイトルに戻る</button>
+    <button type="button" onclick="disp('game')">ゲームを開始</button>
+    <button type="button" onclick="disp('ranking')">ランキンを表示</button>
   </div>
   <div class="body">
     <div class="title">
-      <button type="button" id="Bgame">ゲームを開始</button>
+      <button type="button" onclick="disp('game')">ゲームを開始</button>
     </div>
     <div class="game">
-
     </div>
     <div class="after">
       <div class="result">
