--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
       <button type="button" onclick="disp('game')">ゲームを開始</button>
     </div>
     <div class="game">
+      <button type="button">ゲームスタート</button>
+    </div>
+    <div class="gaming">
+      <span class="typtim">残り時間:</span>
+      <span class="typans">ローマ字:</span>
+      <span class="typpre">読み:</span>
+      <span class="typnow">現在の入力:</span>
     </div>
     <div class="after">
       <div class="result">
