--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <div class="head">
-    <button type="button" onclick="disp('title')">タイトルに戻る</button>
-    <button type="button" onclick="disp('game')">ゲームを開始</button>
-    <button type="button" onclick="disp('ranking')">ランキンを表示</button>
+    <button type="button" id="title">タイトルに戻る</button>
+    <button type="button" id="game">ゲームを開始</button>
+    <button type="button" id="ranking">ランキンを表示</button>
   </div>
   <div class="body">
     <div class="title">
-      <button type="button" onclick="disp('game')">ゲームを開始</button>
+      <button type="button" id="game">ゲームを開始</button>
     </div>
     <div class="game">
       <button type="button">ゲームスタート</button>
@@ -32,7 +32,7 @@
         <span class="typm"></span>
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
-      <button type="button" onclick="rankingB($('.entname').text(),$('.score').text(),$('.typm').text())">ランキングに登録</button>
+      <button type="button" id="entry">ランキングに登録</button>
     </div>
     <div class="ranking">
       <span>ランキング</span>
