--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <td>typing/s</td>
           </tr>
         </thead>
-        <tbody id="ranking">
+        <tbody id="graph">
         </tbody>
       </table>
     </div>
