--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
   <div class="head">
     <button type="button" id="title">タイトルに戻る</button>
-    <button type="button" id="game">ゲームを開始</button>
+    <button type="button" id="game">ゲーム</button>
     <button type="button" id="ranking">ランキンを表示</button>
   </div>
   <div class="body">
     <div class="title">
-      <button type="button" id="game">ゲームを開始</button>
+      <button type="button" id="game">ゲーム</button>
     </div>
     <div class="game">
-      <button type="button">ゲームスタート</button>
+      <button type="button" id="gaming">ゲームスタート</button>
     </div>
     <div class="gaming">
       <span class="typtim">残り時間:</span>
