--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <button type="button" id="gaming">ゲームスタート</button>
     </div>
     <div class="gaming">
-      <span class="typtim">残り時間:</span>
-      <span class="typans">ローマ字:</span>
-      <span class="typpre">読み:</span>
-      <span class="typnow">現在の入力:</span>
+      <p class="typtim">残り時間:</p>
+      <p class="typans">ローマ字:</p>
+      <p class="typpre">読み:</p>
+      <p class="typnow">現在の入力:</p>
     </div>
     <div class="after">
       <div class="result">
