--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button type="button" id="gaming">ゲームスタート</button>
     </div>
     <div class="gaming">
-      <p class="typtim">残り時間:</p>
+      <p><span class="typtim">残り時間:</span><span class="typsco">スコア:</span></p>
       <p class="typans">ローマ字:</p>
       <p class="typpre">読み:</p>
       <p class="typnow">現在の入力:</p>
