--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     </div>
     <div class="after">
       <div class="result">
-        <span class="score"></span>
-        <span class="typm"></span>
+        <p class="score">あなたのスコア:</p>
+        <p class="typm">1秒で平均n回タイピング</p>
+        <p><span class="typCA">正しく打った回数:</span><span class="typWA">間違ったタイピング:</span></p>
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
       <button type="button" id="entry">ランキングに登録</button>
