--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     </div>
     <div class="gaming">
       <p><span class="typtim">残り時間:</span><span class="typsco">スコア:</span></p>
+      <p class="typsta">ステータス:</p>
       <p class="typans">ローマ字:</p>
       <p class="typpre">読み:</p>
+      <p class="typnex">次に入力する文字:</p>
       <p class="typnow">現在の入力:</p>
     </div>
     <div class="after">
@@ -34,6 +36,7 @@
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
       <button type="button" id="entry">ランキングに登録</button>
+      <button type="button" id="title">タイトルに戻る</button>
     </div>
     <div class="ranking">
       <span>ランキング</span>
