--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="gaming">
       <p><span class="typtim">残り時間:</span><span class="typsco">スコア:</span></p>
       <p class="typsta">ステータス:</p>
-      <p class="typans">ローマ字:</p>
-      <p class="typpre">読み:</p>
+      <p class="typans">英語:</p>
+      <p class="typpre">日本語:</p>
       <p class="typnex">次に入力する文字:</p>
       <p class="typnow">現在の入力:</p>
     </div>
@@ -32,7 +32,7 @@
       <div class="result">
         <p class="score">あなたのスコア:</p>
         <p class="typm">1秒で平均n回タイピング</p>
-        <p><span class="typCA">正しく打った回数:</span><span class="typWA">間違ったタイピング:</span></p>
+        <p><span class="typCA">正しく打った回数:</span></p>
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
       <button type="button" id="entry">ランキングに登録</button>
