--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
   <div class="body">
     <div class="title">
       <button type="button" id="game">ゲーム</button>
+      <h2>何これ</h2>
+      <p>タイピングゲームです。</p>
+      <p>文化祭1日前に急いで作りました。</p>
+      <h2>ルール</h2>
+      <p>ゲームが開始すると英語と日本語が表示されるので英語をタイピングしてください。</p>
+      <p>正しく文字を打つとスコアが+5、一単語打ち終えると+10されます。</p>
+      <p>n回連続で正しいタイピングをするとボーナスが0.1×nになります。</p>
+      <p>ミスタイプするボーナスが0に戻されます。</p>
     </div>
     <div class="game">
+      <p>クリックでゲームスタート！</p>
       <button type="button" id="gaming">ゲームスタート</button>
     </div>
     <div class="gaming">
-      <p><span class="typtim">残り時間:</span><span class="typsco">スコア:</span></p>
-      <p class="typsta">ステータス:</p>
+      <p><span class="typtim">残り時間:</span> - <span class="typsco">スコア:</span></p>
+      <p><span class="typsta">ステータス:</span> - <span class="typbon">ボーナス: <span></p>
       <p class="typans">英語:</p>
       <p class="typpre">日本語:</p>
       <p class="typnex">次に入力する文字:</p>
