--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   <div class="head">
     <button type="button" id="title">タイトルに戻る</button>
     <button type="button" id="game">ゲーム</button>
-    <button type="button" id="ranking">ランキンを表示</button>
+    <button type="button" id="ranking">ランキングを表示</button>
   </div>
   <div class="body">
     <div class="title">
-      <button type="button" id="game">ゲーム</button>
       <h2>何これ</h2>
       <p>タイピングゲームです。</p>
       <p>文化祭1日前に急いで作りました。</p>
@@ -41,7 +40,7 @@
       <div class="result">
         <p class="score">あなたのスコア:</p>
         <p class="typm">1秒で平均n回タイピング</p>
-        <p><span class="typCA">正しく打った回数:</span></p>
+        <p><span class="typCA">正しく打った回数:</span> - <span class = "typMax">マックスボーナス:</span></p>
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
       <button type="button" id="entry">ランキングに登録</button>
