--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="head">
-    <button type="button" id="title">タイトルに戻る</button>
-    <button type="button" id="game">ゲーム</button>
-    <button type="button" id="ranking">ランキングを表示</button>
+    <button type="button" class="idtitle">タイトルに戻る</button>
+    <button type="button" class="idgame">ゲーム</button>
+    <button type="button" class="idranking">ランキングを表示</button>
   </div>
   <div class="body">
     <div class="title">
@@ -26,7 +26,7 @@
     </div>
     <div class="game">
       <p>クリックでゲームスタート！</p>
-      <button type="button" id="gaming">ゲームスタート</button>
+      <button type="button" class="idgaming">ゲームスタート</button>
     </div>
     <div class="gaming">
       <p><span class="typtim">残り時間:</span> - <span class="typsco">スコア:</span></p>
@@ -43,8 +43,8 @@
         <p><span class="typCA">正しく打った回数:</span> - <span class = "typMax">マックスボーナス:</span></p>
       </div>
       <input type="text" class="entname" value="ニックネームを入力">
-      <button type="button" id="entry">ランキングに登録</button>
-      <button type="button" id="title">タイトルに戻る</button>
+      <button type="button" class="identry">ランキングに登録</button>
+      <button type="button" class="idtitle">タイトルに戻る</button>
     </div>
     <div class="ranking">
       <span>ランキング</span>
@@ -57,7 +57,7 @@
             <td>typing/s</td>
           </tr>
         </thead>
-        <tbody id="graph">
+        <tbody class="idgraph">
         </tbody>
       </table>
     </div>
