--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <p>文化祭1日前に急いで作りました。</p>
       <h2>ルール</h2>
       <p>ゲームが開始すると英語と日本語が表示されるので英語をタイピングしてください。</p>
-      <p>正しく文字を打つとスコアが+5、一単語打ち終えると+10されます。</p>
-      <p>n回連続で正しいタイピングをするとボーナスが0.1×nになります。</p>
+      <p>正しく文字を打つとスコアが+50、一単語打ち終えると+100されます。</p>
+      <p>正しく文字を入力するとボーナスが+1、一単語打ち終えるとさらに+1されます。</p>
+      <p>増えるスコアは+50+ボーナス、+100+ボーナスです。</p>
       <p>ミスタイプするボーナスが0に戻されます。</p>
     </div>
     <div class="game">
