--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <p class="typm">1秒で平均n回タイピング</p>
         <p><span class="typCA">正しく打った回数:</span> - <span class = "typMax">マックスボーナス:</span></p>
       </div>
-      <input type="text" class="entname" value="ニックネームを入力">
-      <button type="button" class="identry">ランキングに登録</button>
+      <input type="text" class="entname" placeholder="ニックネームを入力">
+      <button type="button" class="identry" value="">ランキングに登録</button>
       <button type="button" class="idtitle">タイトルに戻る</button>
     </div>
     <div class="ranking">
