--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </div>
     <div class="ranking">
       <span>ランキング</span>
+      <span>更新されていない場合はリロードしてください。</span>
+      <span>更新まで時間がかかることがあります。</span>
       <table border="1" style="border-collapse: collapse">
         <thead>
           <tr>
