--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <p class="typm">1秒で平均n回タイピング</p>
         <p><span class="typCA">正しく打った回数:</span> - <span class = "typMax">マックスボーナス:</span></p>
       </div>
-      <input type="text" class="entname" placeholder="ニックネームを入力"></input>
+      <p>ニックネーム入力</p>
+      <input type="text" class="entname" minlength="1" maxlength="40">
       <button type="button" class="identry" value="">ランキングに登録</button>
       <button type="button" class="idtitle">タイトルに戻る</button>
     </div>
