--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <p>ニックネーム入力</p>
       <input type="text" class="entname" minlength="1" maxlength="40">
-      <button type="button" class="identry" value="">ランキングに登録</button>
+      <button type="button" class="identry">ランキングに登録</button>
       <button type="button" class="idtitle">タイトルに戻る</button>
     </div>
     <div class="ranking">
