--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
   <div class="buttom">
     <p>作成-<a href="https://github.com/stranger86952">stranger_86952</a></p>
-    <p>このゲームは<a href="https://fest.nada-sc.jp/2022/">灘中学校第76回文化祭Turn-it-over</a>用に作ったものです</p>
+    <p>このゲームは<a href="https://fest.nada-sc.jp/">灘中学校第76回文化祭Turn-it-over</a>用に作ったものです</p>
     <p>コンソールを使って簡単に不正することができます。しないでください。</p>
   </div>
   <script src="./script.js"></script>
